--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "npm install & serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "dayspan-vuetify": "^0.3.6",
+    "file-system": "^2.2.2",
+    "moment": "^2.22.2",
     "vue": "^2.5.17",
+    "vue-bootstrap-calendar": "^1.3.6",
+    "vue-full-calendar": "^2.7.0",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
