--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "file-system": "^2.2.2",
     "moment": "^2.22.2",
     "vue": "^2.5.17",
+    "vue-airbnb-style-datepicker": "^2.1.0",
     "vue-bootstrap-calendar": "^1.3.6",
+    "vue-bootstrap-datetimepicker": "^5.0.1",
     "vue-full-calendar": "^2.7.0",
     "vue-router": "^3.0.1"
   },
