--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-eslint": "^3.0.5",
+    "@vue/cli-service": "^3.0.5",
+    "vue-template-compiler": "^2.5.17",
     "bootstrap-vue": "^2.0.0-rc.11",
+    "browserify-fs": "^1.0.0",
     "dayspan-vuetify": "^0.3.6",
     "file-system": "^2.2.2",
     "moment": "^2.22.2",
